Fix spacing on "About Me" text

--- a/src/components/c-about-me/c-about-me.scss
+++ b/src/components/c-about-me/c-about-me.scss
@@ -1,6 +1,8 @@
 :host {
   max-width: 700px;
   text-align: center;
+  padding: 0 22px;
+  line-height: 24px;
 
   ul {
     display: inline-block;
